[mirotalkwebrtc] - add roomExists endpoint
